# aftermap

./: README.md  __init__.py  main.py  pyproject.toml  schema.py  worker.py  writer.py
.github/workflows/: main.yml
tests/: test_basic.py
